Fixed Play button visible on Touch Screens Fixed Georgie Storie image

--- a/Shink/Components/Pages/Gratis.razor.css
+++ b/Shink/Components/Pages/Gratis.razor.css
@@ -351,7 +351,7 @@ h1 {
 
 @media (hover: none) and (pointer: coarse) {
     .gratis-cover-play {
-        opacity: 1;
+       /* opacity: 1;*/
         background: linear-gradient(to top, rgba(0, 0, 0, 0.33), rgba(0, 0, 0, 0.03));
     }
 }
